# matlang

./: CMakeLists.txt  README.md  build.sh  comm.cpp  comm.h  commands.cpp  commands.h  dispatcher.cpp  dispatcher.h  expression.cpp  expression.h  integer.cpp  integer.h  interpreter.cpp  interpreter.h  main.cpp  main.py  matrix.cpp  matrix.h  mcomplex.cpp  mcomplex.h  object.h  parser.cpp  parser.h  polynomial.cpp  polynomial.h  rational.cpp  rational.h  run  tmp.cpp  tmp.h  tokenizer.cpp  tokenizer.h
include/: CMakeLists.txt  comm.h  dispatcher.h  error.h  interpreter.h
src/: CMakeLists.txt  comm.cpp  dispatcher.cpp  interpreter.cpp  parser.cpp
tests/: CMakeLists.txt  infix2postfix.cpp  interprer.cpp  main  main.cpp  parser.cpp  test_fw.cpp  test_fw.h  tokenizer.cpp
types/: CMakeLists.txt  expression.cpp  expression.h  integer.cpp  integer.h  matrix.cpp  matrix.h  mcomplex.cpp  mcomplex.h  object.cpp  object.h  polynomial.cpp  polynomial.h  rational.cpp  rational.h
types/include/: CMakeLists.txt  matrix.h  object.h
types/src/: CMakeLists.txt  expression.cpp
